# PeriodWave

./: README.md  commons.py  dataset_codec.py  extract_energy.py  filelist_gen.py  inference.py  inference_large.py  inference_large_with_evaluation.py  inference_periodwave_encodec_universal_test_sound.py  inference_periodwave_encodec_universal_test_sound_step2.py  inference_periodwave_encodec_universal_test_speech.py  inference_periodwave_encodec_universal_test_speech_step2.py  inference_periodwave_encodec_universal_test_vocal.py  inference_periodwave_encodec_universal_test_vocal_step2.py  inference_with_FreeU.py  inference_with_TTS.py  inference_with_evaluation.py  pyproject.toml  requirements.txt  train_periodwave.py  train_periodwave_encodec.py  train_periodwave_turbo.py  train_periodwave_turbo_encodec.py  utils.py
Eval/: pitch_periodicity.py
configs/: periodwave_22050hz.json  periodwave_24000hz.json  periodwave_encodec.json  periodwave_encodec_turbo.json  periodwave_turbo_22050hz.json  periodwave_turbo_24000hz.json
model/: commons.py  convnext.py  diffusion_module.py  ms_mel_loss.py  ms_stftd.py  periodwave.py  periodwave_encodec.py  periodwave_encodec_freeu.py  periodwave_encodec_freeu_utils.py  periodwave_encodec_turbo.py  periodwave_encodec_utils.py  periodwave_freeu.py  periodwave_large.py  periodwave_large_utils.py  periodwave_turbo.py  periodwave_utils.py  periodwave_utils_freeu.py  utils.py
periodwave/: __init__.py  bigvganv2_discriminator.py  diffusion_module.py  periodwave.py  periodwave_encodec.py  periodwave_encodec_freeu.py  periodwave_freeu.py  (+9 more)
(+7 files in other folders)
