[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "periodwave"
version = "0.0.1"
description = "PeriodWave neural vocoder"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
authors = [{ name = "sh-lee-prml" }]

dependencies = [
  "torch>=2.0.0",
  "torchaudio",
  "numpy",
  "scipy",
  "librosa",
  "soundfile",
  "tqdm",
  "numba==0.61.2",
  "einops",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["*"]
exclude = ["tests*", "examples*"]

[tool.setuptools]
py-modules = [
  "encodec_feature_extractor",
  "extract_energy",
  "meldataset_prior_length",
]